[package]
name = "ddp2ass"
version = "0.4.0"
edition = "2021"
description = "Dandanplay 的 json 转成 ass 文件"
license = "MIT"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features =["derive"] }
dunce = "1.0.4"
float-ord = "0.3.2"
log = "0.4.17"
md5 = "0.7.0"
memchr = "2.5.0"
promkit = "0.6.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
simplelog = "0.12.2"
tempfile = "3.5.0"
tokio = {version="1.28.1", features=["full"]}
